--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,8 @@ h1 {
     font-family: IBMPlexMonoBold;
     text-align: center;
 }
+
+p {
+    text-align: center;
+    font-family: IBMPlexMonoBold;
+}
