--- a/css/source.css
+++ b/css/source.css
@@ -1,11 +1,15 @@
 @font-face {
-    font-family: IBMPlexMonoBold;
-    src: url('../resources/IBMPlexMono-Bold.ttf');
+    font-family: 'ibm_plex_monobold';
+    src: url('../resources/ibmplexmono-bold-webfont.woff2') format('woff2'),
+            url('../resources/ibmplexmono-bold-webfont.woff') format('woff');
+    font-display: optional;
 }
 
 @font-face {
-    font-family: IBMPlexMonoSemiBold;
-    src: url('../resources/IBMPlexMono-SemiBold.ttf');
+    font-family: 'ibm_plex_monosemibold';
+    src: url('../resources/ibmplexmono-semibold-webfont.woff2') format('woff2'),
+            url('../resources/ibmplexmono-semibold-webfont.woff') format('woff');
+    font-display: optional;
 }
 
 * {
@@ -13,7 +17,7 @@
 }
 
 div.gallery {
-    font-family: IBMPlexMonoBold;
+    font-family: 'ibm_plex_monobold';
 }
 
 div.gallery img {
@@ -52,16 +56,16 @@ div.desc {
 }
 
 div.text {
-    font-family: IBMPlexMonoSemiBold;
+    font-family: 'ibm_plex_monosemibold';
     margin-bottom: 14px;
 }
 
 h1 {
-    font-family: IBMPlexMonoBold;
+    font-family: 'ibm_plex_monobold';
     text-align: center;
 }
 
 p {
     text-align: center;
-    font-family: IBMPlexMonoBold;
+    font-family: 'ibm_plex_monobold';
 }
