--- a/css/source.css
+++ b/css/source.css
@@ -1,14 +1,12 @@
 @font-face {
     font-family: 'ibm_plex_monobold';
-    src: url('../resources/ibmplexmono-bold-webfont.woff2') format('woff2'),
-            url('../resources/ibmplexmono-bold-webfont.woff') format('woff');
+    src: url('../resources/ibmplexmono-bold-webfont.woff2') format('woff2');
     font-display: optional;
 }
 
 @font-face {
     font-family: 'ibm_plex_monosemibold';
-    src: url('../resources/ibmplexmono-semibold-webfont.woff2') format('woff2'),
-            url('../resources/ibmplexmono-semibold-webfont.woff') format('woff');
+    src: url('../resources/ibmplexmono-semibold-webfont.woff2') format('woff2');
     font-display: optional;
 }
 
